test/ui/src/compile_fail/std/span_name.rs
#[emit::span("test", span_name: "custom")]
fn check() {}

fn main() {
    check();
}
